# py-docx

./: .gitignore  LICENSE  Makefile  README.md  knowledge.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  getting-started.md  index.md  options-reference.md
examples/: README_TABLE_ORIENTATION.md  basic.py  blank.py  breaks.py  captions.py  charts_extended.py  comments.py  count_ops.py  delete_ops.py  find_replace.py  headers_footers.py  hyperlinks_bookmarks.py  images.py  insert_chart_table.py  notes.py  page_numbers.py  paragraphs.py  properties.py  read_chart_data.py  read_tables.py  table_ops.py  toc.py  track_changes.py  update_chart.py  watermark.py
src/pydocx/: __init__.py  blank.py  bookmark.py  breaks.py  captions.py  chart.py  chart_read.py  chart_update.py  comments.py  count.py  delete.py  document.py  errors.py  header_footer.py  hyperlink.py  image.py  lists.py  notes.py  options.py  package_validator.py  page_layout.py  page_numbers.py  paragraph.py  properties.py  read.py  rels.py  replace.py  table.py  table_ops.py  toc.py  track_changes.py  updater.py  watermark.py  xmlops.py  xmlutils.py  ziputils.py
templates/: docx_multi_subsystem_output.docx  docx_output_10_rows.docx  docx_template_with_inserted_chart.docx  docx_template_with_three_charts.docx  empty_template.docx  output_template_approach.docx  template.docx  test_copy_no_update_output.docx  test_simple_output.docx
tests/: test_regressions.py
tools/: extract_tables.sh  verify_orientation.sh
